# performativ

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml
performativ/: client.py  dto.py  enums.py  metric.py  settings.py  test_client.py  test_metric.py
